--- a/views/nav.haml
+++ b/views/nav.haml
@@ -1,6 +1,6 @@
 :plain
   <svg id="nav-logo">
-    <path id="logo-path" d="M 300, 50 a 100,100 0 1,1 -0.1,0 M 300 75 a 60, 60 0 1,1 -0.1 0" fill="rgba(187, 24, 24, 0.7)" fill-rule="evenodd" stroke="none" />
+    <path id="logo-path" fill="rgba(187, 24, 24, 0.7)" fill-rule="evenodd" stroke="none" />
   </svg>
   <!--
   / <svg id="nav">
