--- a/views/index.haml
+++ b/views/index.haml
@@ -2,7 +2,8 @@
   %img.logo{:src => "/images/logos/logo.png"}
   %img.logo.transparent{:src => "/images/logos/logohover.png"}
 
-= haml :nav
+=# haml :nav
+= haml :nav_svg
 
 = haml :about
 = haml :team
