--- a/views/nav.haml
+++ b/views/nav.haml
@@ -1,25 +1,13 @@
-:plain
-  <svg id="nav-logo">
-    <path id="logo-path" fill="rgba(187, 24, 24, 0.7)" fill-rule="evenodd" stroke="none" />
-  </svg>
-  <!--
-  / <svg id="nav">
-  /   <circle cx="200" cy="200" r="100" fill="transparent" stroke-width="50" stroke="#AC1433" stroke-opacity="0.7"/>
-  / </svg>
-
-  / <div id="nav-help">
-  /   <input id="nav-space" type="text" size="11" placeholder="24.61 16.61" />
-  /   <label>Experiment with different values for the "explosion" of the nav circle here, in format "float float", eg "10.2 5.8" representing border-width and space, respectively. Just type a well-formatted value in and hover over the top circle and you'll see what i mean (default 24.61 16.61)
-  /   <a style="color: crimson;" href="http://www.learnsvg.com/books/learnsvg/html/bitmap/chapter02/page02-1.php">In case you need more help</a>
-  /   </label><br/>
-  /   <input id="nav-out" type="text" size="3" placeholder=30 />
-  /   <label>Experiment with different closed radii here (default is 30)</label><br/>
-  /   <input id="nav-in" type="text" size="3" placeholder=90 />
-  /   <label>Experiment with different open radii here (default is 90)</label><br/>
-  /   <input id="nav-width" type="text" size="3" placeholder=20 />
-  /   <label>Stroke width (default is 20)</label>
-  /   <p>Sorry, it's hard to make the exact logo with just one circle. If you think this design is worth pursuing (positioned at the top, or on the side) i'll look into it. Also, sorry i couldn't replicate the color exactly.</p>
-  /   <b id="nav-hide">Click here to hide all this text (refresh to show)</b>
-    
-  / </div>
-  -->
+#nav-container
+  %img.nav-img{:src => "/images/nav/expanded_about.png", :angle => 0}
+  %img.nav-img{:src => "/images/nav/expanded_2012.png", :angle => 18}
+  %img.nav-img{:src => "/images/nav/expanded_team.png", :angle => 36}
+  %img.nav-img{:src => "/images/nav/expanded_2013.png", :angle => 54}
+  %img.nav-img{:src => "/images/nav/expanded_gallery.png", :angle => 72}
+  %img.nav-img{:src => "/images/nav/expanded_connect.png", :angle => 90}
+  %img.nav-img.hover.hidden{:src => "/images/nav/expanded_about-hov.png", :angle => 0}
+  %img.nav-img.hover.hidden{:src => "/images/nav/expanded_2012-hov.png", :angle => 18}
+  %img.nav-img.hover.hidden{:src => "/images/nav/expanded_team-hov.png", :angle => 36}
+  %img.nav-img.hover.hidden{:src => "/images/nav/expanded_2013-hov.png", :angle => 54}
+  %img.nav-img.hover.hidden{:src => "/images/nav/expanded_gallery-hov.png", :angle => 72}
+  %img.nav-img.hover.hidden{:src => "/images/nav/expanded_connect-hov.png", :angle => 90}
