--- a/views/less/style.less
+++ b/views/less/style.less
@@ -1,25 +1,25 @@
 @import 'base.less';
 
 @font-face {
-  font-family: 'Myriad SemiExt';
+  font-family: 'MyMyriad';
   font-style: normal;
-  font-weight: 400;
-  src: local("Myriad SemiExt"), 
+  font-weight: 200;
+  src: local("MyMyriad"), 
     url(/fonts/myriad/MyriadPro-LightSemiExt.otf) format("opentype");
 }
 
 @font-face {
-  font-family: 'Myriad SemiExt';
+  font-family: 'MyMyriad';
   font-style: normal;
-  font-weight: 700;
-  src: local("Myriad SemiExt"), 
+  font-weight: normal;
+  src: local("MyMyriad"), 
     url(/fonts/myriad/MyriadPro-Regular.otf) format("opentype");
 }
 @font-face {
-  font-family: 'Myriad SemiExt';
+  font-family: 'MyMyriad';
   font-style: normal;
-  font-weight: 500;
-  src: local("Myriad SemiExt"), 
+  font-weight: bold;
+  src: local("MyMyriad"), 
     url(/fonts/myriad/MyriadPro-Semibold.otf) format("opentype");
 }
 
@@ -44,8 +44,9 @@ html, body, #wrapper, .panel {
 }
 
 body {
-  font-family: "Myriad SemiExt", "HelveticaNeue-Light", helvetica;
+  font-family: "MyMyriad", "HelveticaNeue-Light", helvetica;
   font-size: @font;
+  font-weight: 200;
   line-height: @lineHeight;
   color: black;
   background-image: url(/images/backgrounds/background2000.jpg);
@@ -82,6 +83,50 @@ body {
 .nav-piece {
   cursor: pointer;
 }
+
+.nav-caption {
+  position: fixed;
+  color: #513E37;
+  opacity: 0.5;
+  font-weight: normal;
+  text-align: center;
+  font-size: 24px;
+  line-height: 30px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  &.shown {
+    color: #B82025;
+    opacity: 1;
+  }
+  .transition(all, 0.2s);
+  bottom: 500px; 
+  right: 200px;
+}
+
+#cap-1 {
+  bottom: 280px;
+  right: 20px;
+}
+#cap-2 {
+  bottom: 260px;
+  right: 110px;
+}
+#cap-3 {
+  bottom: 230px;
+  right: 180px;
+}
+#cap-4 {
+  bottom: 180px;
+  right: 230px;
+}
+#cap-5 {
+  bottom: 110px;
+  right: 260px;
+}
+#cap-6 {
+  bottom: 30px;
+  right: 280px;
+}
+
 
 .nav-img {
   // display: none;
