--- a/views/nav.haml
+++ b/views/nav.haml
@@ -11,3 +11,6 @@
   %img.nav-img.hover.hidden{:src => "/images/nav/expanded_2013-hov.png", :angle => 54}
   %img.nav-img.hover.hidden{:src => "/images/nav/expanded_gallery-hov.png", :angle => 72}
   %img.nav-img.hover.hidden{:src => "/images/nav/expanded_connect-hov.png", :angle => 90}
+  :plain
+    <!--
+      <path id="logo-path" fill="rgba(187, 24, 24, 0.7)" fill-rule="evenodd" stroke="none" /> --> 
