--- a/views/nav_svg.haml
+++ b/views/nav_svg.haml
@@ -1,20 +1,18 @@
-.nav-caption#cap-1 About
-.nav-caption#cap-2 2012
-.nav-caption#cap-3 Team
-.nav-caption#cap-4 2013
-.nav-caption#cap-5 Gallery
-.nav-caption#cap-6 Contact
+#nav-container
+  .nav-caption#cap-1 About
+  .nav-caption#cap-2 2012
+  .nav-caption#cap-3 Team
+  .nav-caption#cap-4 2013
+  .nav-caption#cap-5 Gallery
+  .nav-caption#cap-6 Contact
 
 
-:plain
-  <svg id="nav-logo">
-    <!--
-    <path id="logo-path" fill="rgba(187, 24, 24, 0.7)" fill-rule="evenodd" stroke="none" /> --> 
-
-    <path class='nav-piece' target='1' fill='#513E37' fill-opacity='0.5' stroke='none' d='M 330, 89 A 213,213 0 0,0 244.871, 94.25800000000001 L 254.873, 131.587 A 138,138 0 0,1 330, 128 Z' />
-    <path class='nav-piece' target='2' fill='#513E37' fill-opacity='0.5' stroke='none' d='M 244.871, 94.25800000000001 A 213,213 0 0,0 193.499, 115.537 L 215.202, 153.127 A 138,138 0 0,1 254.873, 131.587 Z' />
-    <path class='nav-piece' target='3' fill='#513E37' fill-opacity='0.5' stroke='none' d='M 193.499, 115.537 A 213,213 0 0,0 149.387, 149.386 L 185.287, 185.286 A 138,138 0 0,1 215.202, 153.127 Z' />
-    <path class='nav-piece' target='4' fill='#513E37' fill-opacity='0.5' stroke='none' d='M 149.387, 149.386 A 213,213 0 0,0 115.537, 193.5 L 167.482, 223.4905 A 138,138 0 0,1 185.287, 185.286 Z' />
-    <path class='nav-piece' target='5' fill='#513E37' fill-opacity='0.5' stroke='none' d='M 115.537, 193.5 A 213,213 0 0,0 94.25800000000001, 244.872 L 163.004, 263.0243 A 138,138 0 0,1 167.482, 223.4905 Z' />
-    <path class='nav-piece' target='6' fill='#513E37' fill-opacity='0.5' stroke='none' d='M 94.25800000000001, 244.872 A 213,213 0 0,0 89, 330 L 180, 330 A 138,138 0 0,1 163.004, 263.0243 Z' />
-  </svg>
+  :plain
+    <svg id="nav-logo">
+      <path class='nav-piece' target='1' fill='#513E37' fill-opacity='0.5' stroke='none' />
+      <path class='nav-piece' target='2' fill='#513E37' fill-opacity='0.5' stroke='none' />
+      <path class='nav-piece' target='3' fill='#513E37' fill-opacity='0.5' stroke='none' />
+      <path class='nav-piece' target='4' fill='#513E37' fill-opacity='0.5' stroke='none' />
+      <path class='nav-piece' target='5' fill='#513E37' fill-opacity='0.5' stroke='none' />
+      <path class='nav-piece' target='6' fill='#513E37' fill-opacity='0.5' stroke='none' />
+    </svg>
