--- a/views/less/style.less
+++ b/views/less/style.less
@@ -66,16 +66,16 @@ body {
   z-index: 100;
 }
 
-@nav-width: 250px;
+@nav-width: 280px;
 @nav-right: 22px;
 @nav-bottom: 42px;
 #nav-logo {
   position: fixed;
-  width: @nav-width+@nav-right;
-  height: @nav-width+@nav-right;
+  width: 20%;
+  height: @nav-width+@nav-bottom;
   right: 0;
   bottom: 0;
-  border: 1pt solid #eee;
+  // border: 1pt solid #eee;
 }
 
 #nav-help {
