no more old stuff

--- a/views/less/index.less
+++ b/views/less/index.less
@@ -3,8 +3,8 @@
   position: absolute;
   top: 35%;
   left: 15%;
-  // max-height: 24%;
-  max-width: 40.5%;
+  width: 40.5%;
+  max-width: 550px;
   .transparent {
     z-index: -1;
   }
