--- a/views/nav_svg.haml
+++ b/views/nav_svg.haml
@@ -1,11 +1,11 @@
 #nav-container
-  .nav-caption#cap-1 About
-  .nav-caption#cap-2 2012
-  .nav-caption#cap-3 Team
-  .nav-caption#cap-4 2013
-  .nav-caption#cap-5 Gallery
-  .nav-caption#cap-6 Contact
-
+  #nav-captions
+    .nav-caption#cap-1 About
+    .nav-caption#cap-2 2012
+    .nav-caption#cap-3 Team
+    .nav-caption#cap-4 2013
+    .nav-caption#cap-5 Gallery
+    .nav-caption#cap-6 Contact
 
   :plain
     <svg id="nav-logo">
