Clicks panels hovers

--- a/views/index.haml
+++ b/views/index.haml
@@ -3,6 +3,12 @@
   %img.logo.transparent{:src => "/images/logos/logohover.png"}
 
 = haml :about
+=# haml :twelve
 = haml :team
 = haml :about
 = haml :team
+= haml :about
+= haml :team
+=# haml :thirteen
+=# haml :gallery
+=# haml :contact
