--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,7 +8,8 @@
   %link{:rel => "stylesheet", :href => "/styles"}/
 
 %body
-  = haml :nav_svg
+  = haml :_nav_svg
+  = haml :_back
   #wrapper
     = yield
 
