--- a/views/less/style.less
+++ b/views/less/style.less
@@ -49,10 +49,10 @@ body {
   font-weight: 200;
   line-height: @lineHeight;
   color: black;
-  background-image: url(/images/backgrounds/background2000.jpg);
-  background-size: cover;
-  background-position: 0% 80%;
-  background-attachment: fixed;
+  // background-image: url(/images/backgrounds/background2000.jpg);
+  // background-size: cover;
+  // background-position: 0% 80%;
+  // background-attachment: fixed;
 }
 
 #wrapper {
@@ -100,32 +100,7 @@ body {
   .transition(all, 0.2s);
 }
 
-#cap-1 {
-  bottom: 280px;
-  right: 20px;
-}
-#cap-2 {
-  bottom: 260px;
-  right: 110px;
-}
-#cap-3 {
-  bottom: 230px;
-  right: 180px;
-}
-#cap-4 {
-  bottom: 180px;
-  right: 230px;
-}
-#cap-5 {
-  bottom: 110px;
-  right: 260px;
-}
-#cap-6 {
-  bottom: 30px;
-  right: 280px;
-}
-
-
+/*
 .nav-img {
   // display: none;
   position: fixed;
@@ -135,45 +110,36 @@ body {
   border: 1pt solid #eee;
   .transition(opacity, 0.1s);
 }
+*/
 
-@expand: 50px;
-#one.hover {
-  bottom: @expand;
-}
-#two.hover {
-  bottom: 30px;
-}
-#three.hover {
-  bottom: 30px;
-}
-#four.hover {
-  bottom: 30px;
-}
-#five.hover {
-  bottom: 30px;
-}
-#six.hover {
-  right: 30px;
+#back-container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -100;
 }
 
-// .back {
-//   z-index: -100;
-//   height: 100%;
-//   width: 100%;
-//   &.one {
-//     background-image: url(/images/backgrounds/background2000.jpg);
-//     background-position: 0% 80%;
-//   }
-//   &.two {
-//     background-image: url(/images/backgrounds/about2000.jpg);
-//     background-position: 0% 80%;
-//   }
-//   &.three {
-//     background-image: url(/images/backgrounds/connect_small.jpg);
-//   }
-//   background-size: cover;
-//   background-attachment: fixed;
-// }
+.back {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-attachment: fixed;
+  // display: none;
+  &:first-child {
+    background-image: url(/images/backgrounds/background2000.jpg);
+    background-position: 0% 80%;
+  }
+  &:nth-child(2) {
+    background-image: url(/images/backgrounds/about2000.jpg);
+    background-position: 0% 80%;
+  }
+  &:nth-child(3) {
+    background-image: url(/images/backgrounds/connect_small.jpg);
+  }
+  &:nth-child(4) {
+    background-image: url(/images/backgrounds/apply2000.jpg);
+  }
+}
 
 .panel {
   position: relative;
