--- a/views/_nav_svg.haml
+++ b/views/_nav_svg.haml
@@ -9,10 +9,10 @@
 
   :plain
     <svg id="nav-logo">
-      <path class='nav-piece' target='1' fill='#513E37' fill-opacity='0.5' stroke='none' />
-      <path class='nav-piece' target='2' fill='#513E37' fill-opacity='0.5' stroke='none' />
-      <path class='nav-piece' target='3' fill='#513E37' fill-opacity='0.5' stroke='none' />
-      <path class='nav-piece' target='4' fill='#513E37' fill-opacity='0.5' stroke='none' />
-      <path class='nav-piece' target='5' fill='#513E37' fill-opacity='0.5' stroke='none' />
-      <path class='nav-piece' target='6' fill='#513E37' fill-opacity='0.5' stroke='none' />
+      <path class='nav-piece' target='1' stroke='none' />
+      <path class='nav-piece' target='2' stroke='none' />
+      <path class='nav-piece' target='3' stroke='none' />
+      <path class='nav-piece' target='4' stroke='none' />
+      <path class='nav-piece' target='5' stroke='none' />
+      <path class='nav-piece' target='6' stroke='none' />
     </svg>
