--- a/views/less/style.less
+++ b/views/less/style.less
@@ -84,14 +84,18 @@ body {
 
 .nav-caption {
   position: fixed;
-  color: #513E37;
-  opacity: 0.5;
+  color: white; // #513E37;
+  //opacity: 0.7;
   font-weight: normal;
+  // padding: 10px;
+  // box-shadow: 0 0 3px rgba(255,255,255,0.5);
   // font-size: 24px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
   &.highlight {
+
     color: #B82025;
     opacity: 1;
+    // background-color: rgba(255,255,255,0.5);
   }
   .transition(all, 0.2s);
 }
