--- a/views/less/style.less
+++ b/views/less/style.less
@@ -84,18 +84,17 @@ body {
 
 .nav-caption {
   position: fixed;
-  color: white; // #513E37;
-  //opacity: 0.7;
+  color: white;
+  opacity: 0.9;
   font-weight: normal;
-  // padding: 10px;
-  // box-shadow: 0 0 3px rgba(255,255,255,0.5);
-  // font-size: 24px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  padding: 5px 3px 0 3px;
   &.highlight {
-
     color: #B82025;
     opacity: 1;
-    // background-color: rgba(255,255,255,0.5);
+    @highlight: rgba(255,255,255,0.7); 
+    background-color: @highlight;
+    .box-shadow(0 0 5px 0 @highlight);
   }
   .transition(all, 0.2s);
 }
