--- a/views/_nav_svg.haml
+++ b/views/_nav_svg.haml
@@ -8,6 +8,7 @@
     .nav-caption#cap-6 CONTACT
 
   :plain
+    -# path values are filled in via Javascript
     <svg id="nav-logo">
       <path class='nav-piece' target='1' stroke='none' />
       <path class='nav-piece' target='2' stroke='none' />
