--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,6 @@
 #home.panel.img
   %img.logo{:src => "/images/logos/logo.png"}
-  %img.logo.transparent{:src => "/images/logos/logohover.png"}
+  %img.logo.hidden{:src => "/images/logos/logohover.png"}
 
 = haml :about
 =# haml :twelve
