--- a/views/_nav_svg.haml
+++ b/views/_nav_svg.haml
@@ -1,15 +1,18 @@
 #nav-container
   #nav-captions
+    .nav-caption#cap-0 HOME
     .nav-caption#cap-1 ABOUT
     .nav-caption#cap-2 2012
     .nav-caption#cap-3 TEAM
     .nav-caption#cap-4 2013
     .nav-caption#cap-5 GALLERY
     .nav-caption#cap-6 CONTACT
+    
 
   :plain
-    -# path values are filled in via Javascript
+    <!-- path values are filled in via Javascript -->
     <svg id="nav-logo">
+      <path class='nav-piece' target='0' stroke='none' />
       <path class='nav-piece' target='1' stroke='none' />
       <path class='nav-piece' target='2' stroke='none' />
       <path class='nav-piece' target='3' stroke='none' />
