--- a/views/less/style.less
+++ b/views/less/style.less
@@ -30,6 +30,9 @@
 .hidden { opacity: 0; }
 .hide { display: none; }
 .full-width { height:100%; width:100%; }
+.bold {
+  font-weight: bold;
+}
 
 /* Overarching styles */
 html, body, .panel, .back {
@@ -128,11 +131,10 @@ body {
     background-color: transparent;
   }
   &.txt {
-    background-image: url(/images/backgrounds/creampaper.png);
-    background-repeat: repeat;
+    background-image: url(/images/backgrounds/eggshell.jpg);
   }
 }
 
-@import "./index.less";
-@import "./about.less";
-@import "./team.less";
+@import "index.less";
+@import "about.less";
+@import "team.less";
