--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,8 +3,13 @@
   %title GAKKO
   %meta{:charset => "utf-8"}
   %meta{"http-equiv" =>"X-UA-Compatible", :content => "IE=edge,chrome=1"}
+  / Fonts
+  %link{:href => "http://fonts.googleapis.com/css?family=Quattrocento:400,700|PT+Sans:400,700", :rel => "stylesheet", :type => "text/css"}/
+  / CSS reset
   %link{:href => "http://reset5.googlecode.com/hg/reset.min.css", :rel => "stylesheet"}/
-  -# %link{:href => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css", :rel => "stylesheet"}/
+  / 
+    Bootstrap
+    %link{:href => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css", :rel => "stylesheet"}/
   %link{:rel => "stylesheet", :href => "/styles"}/
 
 %body
