--- a/views/about.haml
+++ b/views/about.haml
@@ -2,7 +2,7 @@
   .about-container
     %table.about-nav
       %tr
-        %td.about-link{:target => "mission"} MISSION
+        %td.about-link.selected{:target => "mission"} MISSION
         %td.about-link{:target => "philosophy"} PHILOSOPHY
         %td.about-link{:target => "today"} GAKKO, TODAY
         %td.about-link{:target => "vision"} VISION
