--- a/views/less/about.less
+++ b/views/less/about.less
@@ -73,11 +73,11 @@
   cursor: pointer;
   z-index: 0;
   &.camp {
-    top: 20px;
+    top: 0;
     left: 0;
   }
   &.tech {
-    top: 0px;
+    top: -20px;
     left: @circle * 1.2;
   }
   &.tank {
