--- a/views/less/about.less
+++ b/views/less/about.less
@@ -41,16 +41,18 @@
   }
   > div {
     display: inline-block;
-    // border: 1pt solid black;
     vertical-align: top;
   }
   .transition(opacity, 0.2s);
 }
 
 .about-left {
-  font: normal 14pt/18pt 'Quattrocento';
+  font: normal 13pt/18pt 'Quattrocento';
   width: 40%;
-  margin-right: 5%;
+  margin-right: 10%;
+  > p {
+    margin-bottom: 10px;
+  }
 }
 
 .about-right {
