--- a/views/_nav_svg.haml
+++ b/views/_nav_svg.haml
@@ -5,18 +5,17 @@
     .nav-caption#cap-2 2012
     .nav-caption#cap-3 TEAM
     .nav-caption#cap-4 2013
-    .nav-caption#cap-5 GALLERY
-    .nav-caption#cap-6 CONTACT
+    .nav-caption#cap-5 CONTACT
     
 
   :plain
     <!-- path values are filled in via Javascript -->
     <svg id="nav-logo">
-      <path class='nav-piece' target='0' stroke='none' />
-      <path class='nav-piece' target='1' stroke='none' />
-      <path class='nav-piece' target='2' stroke='none' />
-      <path class='nav-piece' target='3' stroke='none' />
-      <path class='nav-piece' target='4' stroke='none' />
-      <path class='nav-piece' target='5' stroke='none' />
-      <path class='nav-piece' target='6' stroke='none' />
+      <path class='nav-piece js-nav' target='0' stroke='none' />
+      <path class='nav-piece js-nav' target='1' stroke='none' />
+      <path class='nav-piece js-nav' target='2' stroke='none' />
+      <path class='nav-piece js-nav' target='3' stroke='none' />
+      <path class='nav-piece js-nav' target='4' stroke='none' />
+      <path class='nav-piece js-nav' target='5' stroke='none' />
+      <path class='nav-piece js-nav' target='6' stroke='none' />
     </svg>
