--- a/views/about.haml
+++ b/views/about.haml
@@ -9,25 +9,26 @@
 
     .about-content.mission.shown
       .about-left
-        %p Content for mission
+        %p Our mission is to make a great many rainbows in the hearts of all children everywhere.
     .about-content.philosophy
       .about-left
-        %p Content for philosophy
+        %p 
+          We believe that...
+          %a{:href => "http://www.youtube.com/watch?v=OQSNhk5ICTI"} DOUBLE RAINBOWWWWW
     .about-content.today
       .about-left
         %p Content for gakko, today, tomorrow and WHENEVA
     .about-content.vision
       .about-left
-        %p Some test
-        %p Some more test
-        %p Some test
-        %p Some test
+        %p We all love schools and envision changing the world for many people one day.
+        %p In particular, we would like everyone in schools to upgrade to #3 pencils; it's about time. Also students should learn always in a handstand position so their heads can have more blood to think with.
+        %p These are just some of the small, but grand reforms we have planned. Once our tanks (see THINK TANK circle) take over the world, implementing our ideals will be easy as pi.
       .about-right
         .circle.camp
           .circle-text
             %p GAKKO
             %p.bold CAMP
-          .circle-overlay
+          .circle-overlay.js-nav{:target => 2}
             %p 
               GAKKO
               %span.bold CAMP
@@ -46,7 +47,7 @@
               %span.bold TECH
             .body-text
               %p WE ARE THE ULTRA GEEKS
-              %p BEHIND KONY 2012
+              %p WHO ARE OUT TO CREATE DORKY 2012
 
         .circle.tank
           .circle-text
