--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,26 +1,27 @@
 !!! 5
-%head
-  %title GAKKO
-  %meta{:charset => "utf-8"}
-  %meta{"http-equiv" =>"X-UA-Compatible", :content => "IE=edge,chrome=1"}
-  / Fonts
-  %link{:href => "http://fonts.googleapis.com/css?family=Quattrocento:400,700|PT+Sans:400,700", :rel => "stylesheet", :type => "text/css"}/
-  / CSS reset
-  %link{:href => "http://reset5.googlecode.com/hg/reset.min.css", :rel => "stylesheet"}/
-  / 
-    Bootstrap
-    %link{:href => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css", :rel => "stylesheet"}/
-  %link{:rel => "stylesheet", :href => "/styles"}/
+%html
+  %head
+    %title GAKKO
+    %meta{:charset => "utf-8"}
+    %meta{"http-equiv" =>"X-UA-Compatible", :content => "IE=edge,chrome=1"}
+    / Fonts
+    %link{:href => "http://fonts.googleapis.com/css?family=Quattrocento:400,700|PT+Sans:400,700", :rel => "stylesheet", :type => "text/css"}/
+    / CSS reset
+    %link{:href => "http://reset5.googlecode.com/hg/reset.min.css", :rel => "stylesheet"}/
+    / 
+      Bootstrap
+      %link{:href => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css", :rel => "stylesheet"}/
+    %link{:rel => "stylesheet", :href => "/styles"}/
 
-%body
-  = haml :_nav_svg
-  = haml :_back
-  #wrapper.full-width
-    = yield
+  %body
+    = haml :_nav_svg
+    = haml :_back
+    #wrapper.full-width
+      = yield
 
-  %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js", :type => "text/javascript"}
-  %script{:src => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"}
-  -# %script{:src => "/javascripts/vendor/jquery.mousewheel.js", :type => "text/javascript"}
-  %script{:src=>"http://d3js.org/d3.v2.js" }
-  -# %script{:src => "/javascripts/vendor/jquery.tweet.js", :type => "text/javascript"}
-  %script{:src => "/scripts", :type => "text/javascript"}
+    %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js", :type => "text/javascript"}
+    %script{:src => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"}
+    -# %script{:src => "/javascripts/vendor/jquery.mousewheel.js", :type => "text/javascript"}
+    %script{:src=>"http://d3js.org/d3.v2.js" }
+    -# %script{:src => "/javascripts/vendor/jquery.tweet.js", :type => "text/javascript"}
+    %script{:src => "/scripts", :type => "text/javascript"}
