making js module

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -24,4 +24,5 @@
     -# %script{:src => "/javascripts/vendor/jquery.mousewheel.js", :type => "text/javascript"}
     %script{:src=>"http://d3js.org/d3.v2.js" }
     -# %script{:src => "/javascripts/vendor/jquery.tweet.js", :type => "text/javascript"}
-    %script{:src => "/scripts", :type => "text/javascript"}
+    %script{:src => "/scripts/functions", :type => "text/javascript"}
+    %script{:src => "/scripts/main", :type => "text/javascript"}
