--- a/views/index.haml
+++ b/views/index.haml
@@ -3,8 +3,7 @@
   %img.logo.hidden{:src => "/images/logos/logohover.png"}
 
 = haml :about
-=# haml :twelve
-= haml :team
+= haml :twelve
 = haml :about
 = haml :team
 = haml :about
