--- a/views/_nav_svg.haml
+++ b/views/_nav_svg.haml
@@ -3,9 +3,9 @@
     .nav-caption#cap-0 HOME
     .nav-caption#cap-1 ABOUT
     .nav-caption#cap-2 2012
-    .nav-caption#cap-3 TEAM
-    .nav-caption#cap-4 2013
-    .nav-caption#cap-5 CONTACT
+    .nav-caption#cap-3 2013
+    .nav-caption#cap-4 TEAM
+    .nav-caption#cap-5 CONNECT
   
   %svg#nav-logo
     %path.nav-piece.js-nav{:target => "0"}
