--- a/views/index.haml
+++ b/views/index.haml
@@ -4,10 +4,8 @@
 
 = haml :about
 = haml :twelve
-= haml :about
+= haml :thirteen
 = haml :team
-= haml :about
-= haml :team
+= haml :connect
 =# haml :thirteen
 =# haml :gallery
-=# haml :contact
