--- a/views/scss/team.scss
+++ b/views/scss/team.scss
@@ -1,6 +1,6 @@
 #team {
   > h1 {
-    color: $brown;
+    color: $grey;
     text-align: center;
     font-size: 50px;
     text-shadow: 0 1px 1px rgba(white, 0.25);
