--- a/views/connect.haml
+++ b/views/connect.haml
@@ -1,2 +1,29 @@
 #connect.panel.img
-  %p connecting...
+  .connect-content
+    %p
+      Like what you see? Get in touch! Find us on
+      %a{:href => "https://www.facebook.com/GAKKOPROJECT", :target => "_blank"} Facebook
+      or
+      = succeed "," do
+        %a{:href => "https://twitter.com/gakkoproject", :target => "_blank"} Twitter
+      shoot us an email (
+      %a{:href => "mailto:contact@gakkoproject.com", :target => "_blank"}> contact@gakkoproject.com
+      ) or sign up for GAKKO email updates.
+    %table.connect-bar
+      %tr
+        %td.connect-icon-container
+          %a{:href => "https://twitter.com/gakkoproject", :target => "_blank"}
+            .connect-icon.twitter.inactive
+            .connect-icon.twitter.active
+        %td.connect-icon-container
+          %a{:href => "https://www.facebook.com/GAKKOPROJECT", :target => "_blank"}
+            .connect-icon.fb.inactive
+            .connect-icon.fb.active
+        %td.connect-icon-container
+          %a{:href => "mailto:contact@gakkoproject.com"}
+            .connect-icon.email.inactive
+            .connect-icon.email.active
+        %td.connect-signup
+          %input{:type => "text", :placeholder => "EMAIL ADDRESS", :target => "_blank"}
+        %td.connect-signup-button 
+          %p SIGN UP
