--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,10 +4,13 @@
     %title GAKKO
     %meta{:charset => "utf-8"}
     %meta{"http-equiv" =>"X-UA-Compatible", :content => "IE=edge,chrome=1"}
+    %link{:rel=>"shortcut icon", :href=>"/images/favicon.ico"}
     / Fonts
     %link{:href => "http://fonts.googleapis.com/css?family=Quattrocento:400,700|PT+Sans:400,700", :rel => "stylesheet", :type => "text/css"}/
     / CSS reset
     %link{:href => "http://reset5.googlecode.com/hg/reset.min.css", :rel => "stylesheet"}/
+    %link{:href => "/stylesheets/jquery.fancybox.css", :rel => "stylesheet"}/
+    %link{:href => "/stylesheets/jquery.fancybox-thumbs.css", :rel => "stylesheet"}/
     / 
       Bootstrap
       %link{:href => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css", :rel => "stylesheet"}/
@@ -23,6 +26,9 @@
     %script{:src => "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"}
     -# %script{:src => "/javascripts/vendor/jquery.mousewheel.js", :type => "text/javascript"}
     %script{:src=>"http://d3js.org/d3.v2.js" }
+    %script{:src=>"/javascripts/jquery.fancybox.pack.js", :type => "text/javascript"}
+    %script{:src=>"/javascripts/jquery.fancybox-thumbs.js", :type => "text/javascript"}
+
     -# %script{:src => "/javascripts/vendor/jquery.tweet.js", :type => "text/javascript"}
     %script{:src => "/scripts/functions", :type => "text/javascript"}
     %script{:src => "/scripts/main", :type => "text/javascript"}
