--- a/views/connect.haml
+++ b/views/connect.haml
@@ -20,7 +20,7 @@
             .connect-icon.fb.inactive
             .connect-icon.fb.active
         %td.connect-icon-container
-          %a{:href => "mailto:contact@gakkoproject.com"}
+          %a{:href => "mailto:contact@gakkoproject.com", :target => "_blank"}
             .connect-icon.email.inactive
             .connect-icon.email.active
         %td.connect-signup
