--- a/views/scss/about.scss
+++ b/views/scss/about.scss
@@ -11,7 +11,7 @@
 .about-nav {
   width: 100%;
 }
-
+$about-blue: #004D68;
 .about-link {
   color: rgba($brown, 0.3);
   cursor: pointer;
@@ -20,7 +20,7 @@
     color: rgba($brown, 0.6);
   }
   &.selected {
-    color: rgba($blue, 1.0);
+    color: rgba($about-blue, 1.0);
     text-shadow: none; //0 1px 1px rgba(black, 0.25);
   }
   @include transition(color 0.2s);
@@ -112,7 +112,7 @@ $overlayOffset: ($circle - $overlay) * 0.5;
   padding: $circle/4; 
   color: white;
   text-align: left;
-  background-color: rgba($blue, 1);
+  background-color: rgba($about-blue, 1);
   z-index: 10;
   opacity: 0;
   @include transition(opacity 0.1s);
