--- a/views/scss/connect.scss
+++ b/views/scss/connect.scss
@@ -7,7 +7,7 @@ $connect-grey: rgba(#2B2E31, 0.7);
   text-align: justify;
   background-color: rgba(white, 0.4);
   padding: 30px;
-  border: 1pt solid rgba(white, 0.9);
+  // border: 1pt solid rgba(white, 0.9);
   > p {
     font: normal 16pt 'Quattrocento';
     color: $grey;
