--- a/views/_nav_svg.haml
+++ b/views/_nav_svg.haml
@@ -17,7 +17,7 @@
     %path.nav-piece.js-nav{:target => "6"}
     - color = "#B82025"
     - color = "white"
-    %path.nav-outline{:fill => "none", :stroke => "#{color}", "stroke-opacity" => "0.5", "stroke-width" => "2"}
+    %path.nav-outline{:fill => "none"}
     -# :d => "M 294 107.68 A 156,156 0 0,0 107.68 294", 
     -# :d => "M 288 134 A 101.2,101.2 0 0,0 229 328", 
-    %path.nav-outline{:fill => "none", :stroke => "#{color}", "stroke-opacity" => "0.5", "stroke-width" => "2"}
+    %path.nav-outline{:fill => "none"}
