--- a/views/scss/connect.scss
+++ b/views/scss/connect.scss
@@ -5,11 +5,11 @@ $connect-grey: rgba(#2B2E31, 0.7);
   margin: 0 auto;
   margin-top: 15%;
   text-align: justify;
-  background-color: rgba(white, 0.4);
+  // background-color: rgba(white, 0.4);
   padding: 30px;
   // border: 1pt solid rgba(white, 0.9);
   > p {
-    font: normal 16pt 'Quattrocento';
+    font: normal 13pt/16pt 'Quattrocento';
     color: $grey;
   }
 }
@@ -28,7 +28,7 @@ $connect-grey: rgba(#2B2E31, 0.7);
     background-color: rgba(white, 0.7);
     border: 1pt solid #ccc;
     vertical-align: baseline;
-    @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075));
+    // @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075));
     @include transition(border 0.2s, box-shadow 0.2s);
     &:focus {
       border-color: rgba($red, 0.8);
@@ -48,6 +48,9 @@ $connect-grey: rgba(#2B2E31, 0.7);
     .connect-icon.active {
       opacity: 1;
     }
+  }
+  &:nth-child(3) {
+    width: 15%;
   }
 }
 
@@ -94,6 +97,7 @@ $connect-grey: rgba(#2B2E31, 0.7);
   text-align: center;
   cursor: pointer;
   font-size: 16px;
+  width: 80px;
   &:hover {
     background-color: darken($connect-grey, 20%);
   }
