--- a/views/twelve.haml
+++ b/views/twelve.haml
@@ -2,7 +2,7 @@
   .twelve-container
     %table.twelve-nav
       %tr
-        %td.twelve-link MISSION
-        %td.twelve-link PHILOSOPHY
-        %td.twelve-link GAKKO, TODAY
-        %td.twelve-link VISION
+        %td.twelve-link ARRIVAL
+        %td.twelve-link PREPARATION
+        %td.twelve-link THE CAMP
+        %td.twelve-link REFLECTIONS
