--- a/views/scss/twelve.scss
+++ b/views/scss/twelve.scss
@@ -1,78 +1,27 @@
-#twelve {
-  font-size: 0;
-}
-
-.quarter-panel {
-  display: inline-block;
-  position: relative;
-  width: 50%;
-  height: 50%;
-  background-size: cover;
-  &:first-child {
-    background-image: url(/images/2012/arrival/1.jpg);
-  }
-  &:nth-child(2) {
-    background-image: url(/images/2012/prep/4.jpg);
-  }
-  &:nth-child(3) {
-    background-image: url(/images/2012/camp/7.jpg);
-  }
-  &:nth-child(4) {
-    background-image: url(/images/2012/reflections/5.jpg);
-  }
-  &:hover {
-    .overlay {
-      opacity: 1;
-    }
-  }
-
-  img {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    z-index: 0;
-    vertical-align: top;
-    border: none;
-  }
-
-  .overlay {
-    position: absolute;
-    top: 0; left: 0;
-    height: 100%; 
-    width: 100%;
-    z-index: 1;
-    opacity: 0;
-    background-color: rgba(black, 0.3);
-    color: white;
-    text-align: center;
-    @include transition(opacity 0.3s);
-  }
-
-  p {
-    font-size: 24px;
-    padding-top: 25%;
-  }
-}
-
 $twelve-circle: 200px;
 
-.twelve-circle {
-  font-size: 64px;
-  position: absolute;
-  color: $red;
-  z-index: 10;
-  width: $twelve-circle;
-  height: $twelve-circle;
-  left: 50%;
-  top: 50%;
-  margin-left: -$twelve-circle*0.75;
-  margin-top: -$twelve-circle*0.75;
-  border-radius: $twelve-circle;
-  padding: $twelve-circle / 4;
-  text-align: center;
-  background-color: rgba(white, 0.8);
-  p {
-    font-weight: bold;
-    padding-top: 33%;
+.twelve-container {
+  position: relative;
+  width: 960px;
+  margin: 0 auto;
+  padding: 50px 0;
+  font: normal 30pt "PT Sans";
+}
+
+.twelve-nav {
+  width: 100%;
+}
+
+.twelve-link {
+  color: rgba(white, 0.5);
+  cursor: pointer;
+  // text-shadow: 0 1px 1px rgba(black, 0.25);
+  &:hover {
+    color: rgba(white, 0.8);
   }
+  &.selected {
+    color: rgba(white, 1);
+    // text-shadow: none; //0 1px 1px rgba(black, 0.25);
+  }
+  @include transition(color 0.2s);
 }
